# Xapian-go-bindings

./: Makefile.am  README.md  attributes.h  bindings.sh  constants.h  database.cc  database.h  document.cc  document.h  getbindings.sh  go.i  go_wrap.cxx  go_wrap.h  gsoc.go  gsoc.h  gsoc.i  gsoc_wrap.cxx  in.sh  lkm  shellscript.sh  stem.cc  stem.h  xapian.go
work/: _cgo_export.h  _cgo_flags  _cgo_gotypes.go  _cgo_import.go  gsoc.cgo1.go  gsoc.cgo2.c  importcfg  importcfg.link
